Committing the latest code

--- a/RestAssuredAutomation/test-output/emailable-report.html
+++ b/RestAssuredAutomation/test-output/emailable-report.html
@@ -9,12 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,450</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">1,624</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">Tests.put_patch_delete</td><td><a href="#m0">delete_request</a></td><td rowspan="1">1656675961664</td><td rowspan="1">3277</td></tr><tr class="passedeven"><td><a href="#m1">patch_request</a></td><td rowspan="1">1656675964946</td><td rowspan="1">794</td></tr><tr class="passedeven"><td><a href="#m2">put_request</a></td><td rowspan="1">1656675965751</td><td rowspan="1">1301</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">Tests.TestOnLocalAPIs_003</td><td><a href="#m0">deleteRequest</a></td><td rowspan="1">1657012510481</td><td rowspan="1">1324</td></tr><tr class="passedeven"><td><a href="#m1">getRequest</a></td><td rowspan="1">1657012511808</td><td rowspan="1">123</td></tr><tr class="passedeven"><td><a href="#m2">patchRequest</a></td><td rowspan="1">1657012511933</td><td rowspan="1">59</td></tr><tr class="passedeven"><td><a href="#m3">postRequest</a></td><td rowspan="1">1657012511995</td><td rowspan="1">47</td></tr><tr class="passedeven"><td><a href="#m4">putRequest</a></td><td rowspan="1">1657012512043</td><td rowspan="1">29</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">Tests.put_patch_delete#delete_request</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Tests.put_patch_delete#patch_request</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">Tests.put_patch_delete#put_request</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">Tests.TestOnLocalAPIs_003#deleteRequest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Tests.TestOnLocalAPIs_003#getRequest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Tests.TestOnLocalAPIs_003#patchRequest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">Tests.TestOnLocalAPIs_003#postRequest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">Tests.TestOnLocalAPIs_003#putRequest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
