--- a/RestAssuredAutomation/test-output/old/Default suite/classes.html
+++ b/RestAssuredAutomation/test-output/old/Default suite/classes.html
@@ -4,22 +4,30 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Tests.put_patch_delete</td>
+<td>Tests.TestOnLocalAPIs_003</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>put_request</td>
+<td>getRequest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>patch_request</td>
+<td>patchRequest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>delete_request</td>
+<td>putRequest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>postRequest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>deleteRequest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
