--- a/RestAssuredAutomation/test-output/old/Default suite/methods-alphabetical.html
+++ b/RestAssuredAutomation/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e5f797">  <td>22/07/01 17:16:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="put_patch_delete.delete_request()[pri:0, instance:Tests.put_patch_delete@73700b80]">delete_request</td> 
+<tr bgcolor="e5f797">  <td>22/07/05 14:45:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOnLocalAPIs_003.deleteRequest()[pri:0, instance:Tests.TestOnLocalAPIs_003@10d307f1]">deleteRequest</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="e5f797">  <td>22/07/01 17:16:04</td>   <td>3282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="put_patch_delete.patch_request()[pri:0, instance:Tests.put_patch_delete@73700b80]">patch_request</td> 
+<tr bgcolor="e5f797">  <td>22/07/05 14:45:11</td>   <td>1327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOnLocalAPIs_003.getRequest()[pri:0, instance:Tests.TestOnLocalAPIs_003@10d307f1]">getRequest</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="e5f797">  <td>22/07/01 17:16:05</td>   <td>4088</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="put_patch_delete.put_request()[pri:0, instance:Tests.put_patch_delete@73700b80]">put_request</td> 
+<tr bgcolor="e5f797">  <td>22/07/05 14:45:11</td>   <td>1452</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOnLocalAPIs_003.patchRequest()[pri:0, instance:Tests.TestOnLocalAPIs_003@10d307f1]">patchRequest</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="e5f797">  <td>22/07/05 14:45:11</td>   <td>1514</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOnLocalAPIs_003.postRequest()[pri:0, instance:Tests.TestOnLocalAPIs_003@10d307f1]">postRequest</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="e5f797">  <td>22/07/05 14:45:12</td>   <td>1562</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOnLocalAPIs_003.putRequest()[pri:0, instance:Tests.TestOnLocalAPIs_003@10d307f1]">putRequest</td> 
   <td>main@1361960727</td>   <td></td> </tr>
 </table>
