--- a/RestAssuredAutomation/test-output/old/Default suite/classes.html
+++ b/RestAssuredAutomation/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Tests.JSON_Schma_Validator_004</td>
+<td>Tests.XMLSchemaValidation_006</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>json_SchemaValidator</td>
+<td>SchemaValidation</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
