--- a/RestAssuredAutomation/test-output/old/Default suite/classes.html
+++ b/RestAssuredAutomation/test-output/old/Default suite/classes.html
@@ -4,14 +4,22 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Tests.XMLSchemaValidation_006</td>
+<td>Tests.test_001</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>SchemaValidation</td>
+<td>post_request</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>first_test</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>second_test</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
