--- a/RestAssuredAutomation/test-output/old/Default suite/methods-alphabetical.html
+++ b/RestAssuredAutomation/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9b8ea6">  <td>22/07/07 15:43:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XMLSchemaValidation_006.SchemaValidation()[pri:0, instance:Tests.XMLSchemaValidation_006@56cdfb3b]">SchemaValidation</td> 
+<tr bgcolor="9b8ea6">  <td>22/07/09 15:08:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test_001.first_test()[pri:0, instance:Tests.test_001@28f2a10f]">first_test</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="9b8ea6">  <td>22/07/09 15:08:21</td>   <td>6830</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test_001.post_request()[pri:0, instance:Tests.test_001@28f2a10f]">post_request</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="9b8ea6">  <td>22/07/09 15:08:22</td>   <td>7507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test_001.second_test()[pri:0, instance:Tests.test_001@28f2a10f]">second_test</td> 
   <td>main@1361960727</td>   <td></td> </tr>
 </table>
